azure-resiliency-yamls/azure-resiliency-kustomize-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nxrm-deployment-nexus
  namespace: nexus-repo-mgr
  labels:
    app: nxrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nxrm
  template:
    metadata:
      labels:
        app: nxrm
    spec:
      containers:
      - name: nxrm-app
        image: sonatype/nexus3:3.37.0
        securityContext:
          runAsUser: 200
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
   - name: INSTALL4J_ADD_VM_PARAMS
          value: "-Xms2703m -Xmx2703m -XX:MaxDirectMemorySize=2703m -Dnexus.licenseFile=/nxrm-license/nxrm-license.lic \
          -Dnexus.datastore.enabled=true -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=require \
          -Dnexus.datastore.nexus.username=${DB_USER}@db_server_name \
          -Dnexus.datastore.nexus.password=${DB_PASSWORD}"
        volumeMounts:
          - mountPath: /nxrm-license
            name: license-volume
          - name: nexusdata
            mountPath: /nexus-data
          - name: logback-tasklogfile-override
            mountPath: /nexus-data/etc/logback/logback-tasklogfile-appender-override.xml
            subPath: logback-tasklogfile-appender-override.xml
      - name: request-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/request.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data
      - name: audit-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/audit/audit.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data
      - name: tasks-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/tasks/allTasks.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data            
      volumes:
      - name: nexusdata
        persistentVolumeClaim:
          claimName: ebs-claim
      - name: license-volume
        configMap:
          name: nxrm-license
      - name: logback-tasklogfile-override
        configMap:
          name: nxrm-logback-tasklogfile-override 
          items:
               - key: logback-tasklogfile-appender-override.xml
                 path: logback-tasklogfile-appender-override.xml
