azure-resiliency-yamls/create-nexus-work-dir.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name:  create-nexus-work-dir
  namespace: nexus-repo-mgr
spec:
  selector:
    matchLabels:
      job: dircreator
  template:
    metadata:
      labels:
        job: dircreator
    spec:
      hostPID: true
      restartPolicy: Always
      containers:
      - name: directory-creator
        image: busybox:1.33.1
        command: ["/bin/sh"]
        args:
            - -c
            - >-
              tail -f /dev/null
        securityContext:
          privileged: true 
      volumes:
      - name: create-nexus-work-dir-script
        configMap:
          name: create-nexus-workdir-config
      - name: host-mnt
        hostPath:
          path: /tmp/install
