azure-resiliency-yamls/azure-resiliency-services.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nexus-repo-mgr
  name: ingress-nxrm-nexus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nxrm-service-nexus
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nxrm-service-nexus
  namespace: nexus-repo-mgr
  labels:
    app: nxrm
spec:
  type: NodePort
  selector:
    app: nxrm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
